--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,13 +3,19 @@
 body {
     height: 100%;
     margin:0;
+    box-sizing: border-box;
 }
 
 html{
     height:100%;
-    box-sizing: border-box;
 }
 
 #app {
     height:100%;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
