update-component-SideBar
基本完成SideBar组件，解决了区分底色的问题，解决了原生水平滚动条显示的问题。在SideBar组件里引入了AppLink、MebuItem、Logo组件

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,6 @@
 @import './transition.scss';
+@import './sidebar.scss';
+@import './colors.scss';
 
 body {
     height: 100%;
@@ -18,4 +20,8 @@ html{
 *:before,
 *:after {
   box-sizing: inherit;
+}
+
+a {
+    text-decoration: none;
 }
